--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Button Example</title>
-  <link rel="stylesheet" href="path/to/your/compiled.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Growth - Nzenwata Christopher</title>
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets//img/favicon.ico" type="image/x-icon">
+
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="./assets/scss/css/main.css">
+    <link rel="stylesheet" href="#">
+
+    <!-- online CDN(s) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- offline CDN(s) -->
+     <link rel="stylesheet" href="./assets/scss/css/font-awsome/css/all.min.css">
+
 </head>
 <body>
+    <nav class="desktop">
+        <div class="container">
+            <img src="./assets/img/logo.png" alt="logo">
 
-  <button class="button">Click Me</button>
-
-  <button class="button" disabled>Disabled Button</button>
-
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#" class="log-in"><i class="fas fa-user"></i>Log In</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
