--- a/index.html
+++ b/index.html
@@ -33,5 +33,23 @@
             </ul>
         </div>
     </nav>
+
+    <section class="hero">
+        <div class="container"> <!-- take bg-img and helps centralize what is inside -->
+            <div class="hero-content">
+                <h1 class="hero-heading text-xxl">
+                    A powerful solution to grow your startup. Fast!
+                </h1>
+
+                <p class="hero-text">
+                    A powerful solution to grow your startup. Fast!
+                </p>
+
+                <div class="button-container">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
