hero scss desktop

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 </p>
 
                 <div class="button-container">
-                    
+                    <a href="#">Get started</a>
+                    <a href="#"><i class="fas fa-laptop"></i>Book a Demo</a>
                 </div>
             </div>
         </div>
