--- a/index.html
+++ b/index.html
@@ -52,5 +52,17 @@
             </div>
         </div>
     </section>
+
+    <section class="video">
+        <div class="container-sm">
+            <h2>
+                See how it works and get started in less than 2 minutes
+            </h2>
+
+            <img src="./assets/img/video-preview.png" alt="video">
+
+            <a href="#">Get Started</a>
+        </div>
+    </section>
 </body>
 </html>
