--- a/index.html
+++ b/index.html
@@ -94,5 +94,25 @@
                 </div>    
         </div>
     </section>
+
+    <section class="pricing">
+        <div class="container-sm">
+            <h2>Pricng</h2>
+            <p>Start free and scale while you <span>Grow</span>. No hidden fees. Unlimited users for free.</p>
+
+            <div class="pricing-grid">
+                <div class="card">
+                    <h2>Simple</h2>
+                    <p>Keep Track of your contacts, gain valuable insights, analyse live data and performance metrics</p>
+                    <p><span>FREE</span> *No Credit Card needed</p>
+                </div>
+                <div class="card">
+                    <h2>Simple</h2>
+                    <p>Keep Track of your contacts, gain valuable insights, analyse live data and performance metrics</p>
+                    <p><span>FREE</span> *No Credit Card needed</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
