--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="desktop">
         <div class="container">
-            <img src="./assets/img/logo.png" alt="logo">
+            <a href="#"><img src="./assets/img/logo.png" alt="logo"></a>
 
             <ul>
                 <li><a href="#">Home</a></li>
@@ -104,12 +104,24 @@
                 <div class="card">
                     <h2>Simple</h2>
                     <p>Keep Track of your contacts, gain valuable insights, analyse live data and performance metrics</p>
-                    <p><span>FREE</span> *No Credit Card needed</p>
+                    <p><span>Free</span> *No Credit Card needed</p>
+                    <ul>
+                        <li><i class="fas fa-check"></i>Real-Time Monitoring</li>
+                        <li><i class="fas fa-check"></i>Real-Time Secirity</li>
+                        <li><i class="fas fa-check"></i>Real-Time Data</li>
+                    </ul>
+                    <a href="#">Get Started</a>
                 </div>
                 <div class="card">
-                    <h2>Simple</h2>
+                    <h2>Premium</h2>
                     <p>Keep Track of your contacts, gain valuable insights, analyse live data and performance metrics</p>
-                    <p><span>FREE</span> *No Credit Card needed</p>
+                    <p><span>$49</span>/month</p>
+                    <ul>
+                        <li><i class="fas fa-check"></i>Data Visualization</li>
+                        <li><i class="fas fa-check"></i>Schedule Appointments</li>
+                        <li><i class="fas fa-check"></i>Immediate Feedback</li>
+                    </ul>
+                    <a href="#" class="premium">Get Started</a>
                 </div>
             </div>
         </div>
