--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
                     <a href="#" class="premium">Get Started</a>
                 </div>
             </div>
+
+            <p>All prices are in USD and changed per month with applicable taxes added at checkout</p>
         </div>
     </section>
 </body>
