--- a/index.html
+++ b/index.html
@@ -128,5 +128,17 @@
             <p>All prices are in USD and changed per month with applicable taxes added at checkout</p>
         </div>
     </section>
+
+    <section class="faq">
+        <div class="container-sm"> 
+        <h2>Frequently Asked Questions</h2>
+
+        <ul>
+            <li><a href="#">All</a></li>
+            <li><a href="#">Get Started</a></li>
+            <li><a href="#">Pricing</a></li>
+        </ul>
+        </div>
+    </section>
 </body>
 </html>
