--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <h2>Frequently Asked Questions</h2>
 
         <ul>
-            <li><a href="#">All</a></li>
-            <li><a href="#">Get Started</a></li>
+            <li><a href="#" class="active">All</a></li>
+            <li><a href="#">Getting Started</a></li>
             <li><a href="#">Pricing</a></li>
         </ul>
         </div>
