--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <section class="pricing">
         <div class="container-sm">
-            <h2>Pricng</h2>
+            <h2>Pricing</h2>
             <p>Start free and scale while you <span>Grow</span>. No hidden fees. Unlimited users for free.</p>
 
             <div class="pricing-grid">
@@ -237,9 +237,66 @@
               </div>
             </div>
           </div>
-          
+
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <a href="#"><img src="./assets/img/logo-white.png" alt=""></a>
+
+            <div class="contact-content">
+                <form action="#">
+                    <h4>Subscribe to Newsletter</h4>
+                    <p>Subscribe now to receive tips on how to take your business to the next level.</p>
+                    <input type="email" placeholder="Enter your email">
+                    <button type="submit" title="submit">Subscribe</button>
+                </form>
+
+                <div>
+                <h4>Company</h4>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Our Process</a></li>
+                    <li><a href="#">Join Our Team</a></li>
+                </ul>
+                </div>
+
+                <div>
+                <h4>Resources</h4>
+                <ul>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Research</a></li>
+                    <li><a href="#">Recent Projects</a></li>
+                </ul>
+                </div>
+
+                <div>
+                <h4>Contact</h4>
+                <ul>
+                    <li><a href="mailto:nzenwatachristopher186@gmail.com">nzenwatachristopher186@gmail.com</a>
+                    </li>
+                    <li><a href="#">123 XYZ Street, New York</a></li>
+                </ul>
+                </div>
+            </div>
+
+            <div class="icons">
+                <a href="https://github.com/Chris-Error-404" target="_blank" class="icon">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/christopher-nzenwata-b52807334/" target="_blank" class="icon">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://wa.me/2348141207888" target="_blank" class="icon">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="https://www.reddit.com/user/YourRedditUsername" target="_blank" class="icon">
+                    <i class="fab fa-reddit"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 
     <script src="./assets/js/main.js"></script>
 </body>
