--- a/index.html
+++ b/index.html
@@ -282,16 +282,16 @@
             </div>
 
             <div class="icons">
-                <a href="https://github.com/Chris-Error-404" target="_blank" class="icon">
+                <a href="https://github.com/Chris-Error-404" target="_blank" rel="noopener" class="icon" title="Visit GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/christopher-nzenwata-b52807334/" target="_blank" class="icon">
+                <a href="https://www.linkedin.com/in/christopher-nzenwata-b52807334/" target="_blank" rel="noopener" class="icon" title="Visit LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://wa.me/2348141207888" target="_blank" class="icon">
+                <a href="https://wa.me/2348141207888" target="_blank" rel="noopener" class="icon" title="Contact via WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="https://www.reddit.com/user/YourRedditUsername" target="_blank" class="icon">
+                <a href="https://www.reddit.com/user/YourRedditUsername" target="_blank" rel="noopener" class="icon" title="Visit Reddit Profile">
                     <i class="fab fa-reddit"></i>
                 </a>
             </div>
