--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="./assets/scss/css/main.css">
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="./assets/scss/css/responsive.css">
 
     <!-- online CDN(s) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -49,6 +49,8 @@
                     <a href="#">Get started</a>
                     <a href="#"><i class="fas fa-laptop"></i>Book a Demo</a>
                 </div>
+
+                <img src="./assets/img/hero-bg-mobile.png" alt="" class="mobile">
             </div>
         </div>
     </section>
