--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
 
 </head>
 <body>
+  <header class="mobile-header">
+    <input type="checkbox" id="nav-toggle" class="mobile-header__toggle" />
+    <label for="nav-toggle" class="mobile-header__label">
+      <img src="./assets/img/logo.png" alt="logo" class="mobile-header__logo" />
+      <span class="mobile-header__menu-icon"></span>
+    </label>
+    <nav class="mobile-header__nav">
+      <ul class="mobile-header__nav-list">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#" class="log-in"><i class="fas fa-user"></i>Log In</a></li>
+      </ul>
+    </nav>
+  </header>
+
     <nav class="desktop">
         <div class="container">
             <a href="#"><img src="./assets/img/logo.png" alt="logo"></a>
