--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </p>
 
                 <div class="button-container">
-                    <a href="#">Get started</a>
+                    <a href="#" class="a-btn">Get started</a>
                     <a href="#"><i class="fas fa-laptop"></i>Book a Demo</a>
                 </div>
 
